# Java-native-HTTP

./: .gitignore  README.md  build.gradle  settings.gradle
src/main/cpp/: CMakeLists.txt  Findavcodec.cmake  Findavformat.cmake  Findavutil.cmake  Findswresample.cmake  Findswscale.cmake
src/main/cpp/jni/: jni.c
src/main/java/com/tom/streamlabs/: SlNanoServer.java
src/main/java/com/tom/streamlabs/media/: AudioDetails.java  MediaDetails.java  SubtitleDetails.java  VideoDetails.java
static/: index.html  index1.html
